[gd_scene load_steps=3 format=3 uid="uid://byj1y3wrwtdtq"]

[ext_resource type="PackedScene" uid="uid://biqm56x6ewbmo" path="res://ui/SettingUI.tscn" id="1_oj67h"]
[ext_resource type="Script" path="res://ui/pause_ui.gd" id="1_y22bm"]

[node name="PauseUI" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_y22bm")

[node name="PauseOptionBG" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 9
anchor_bottom = 1.0
offset_left = 64.0
offset_right = 320.0
grow_vertical = 2
color = Color(0, 0, 0, 0.733333)

[node name="VBoxContainer" type="VBoxContainer" parent="PauseOptionBG"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -81.0
offset_top = -200.0
offset_right = 81.0
offset_bottom = -70.0
grow_horizontal = 2
grow_vertical = 0
theme_override_constants/separation = 20

[node name="SettingButton" type="Button" parent="PauseOptionBG/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 35
text = "Settings"

[node name="ExitButton" type="Button" parent="PauseOptionBG/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 35
text = "Exit"

[node name="SettingUI" parent="." instance=ExtResource("1_oj67h")]
visible = false
layout_mode = 1

[connection signal="pressed" from="PauseOptionBG/VBoxContainer/SettingButton" to="." method="_on_setting_button_pressed"]
[connection signal="pressed" from="PauseOptionBG/VBoxContainer/ExitButton" to="." method="_on_exit_button_pressed"]
